--- a/deployment/cloudrun/Dockerfile
+++ b/deployment/cloudrun/Dockerfile
@@ -1,12 +1,12 @@
-# Stage 1: Download and unpack GRCh38-only seqrepo
+deployment/cloudrun/Dockerfile # Stage 1: Download and unpack GRCh38-only seqrepo
 FROM python:3.12-slim AS seqrepo-builder
 
 RUN apt-get update && apt-get install -y --no-install-recommends curl && \
     rm -rf /var/lib/apt/lists/*
 
-RUN curl -sSL https://pub-a70997b5b39342fe887c521b504d73de.r2.dev/seqrepo/seqrepo-2025-08-27-GRCh38.tar.gz \
+RUN curl -SL --progress-bar https://pub-a70997b5b39342fe887c521b504d73de.r2.dev/seqrepo/seqrepo-2025-08-27-GRCh38.tar.gz \
     | tar -xz -C / \
-    && mv /2025-08-27 /seqrepo
+    && mv /2025-08-27-GRCh38 /seqrepo
 
 # Stage 2: Runtime image with vrs-python, bcftools, and gcloud CLI
 FROM python:3.12-slim
@@ -17,14 +17,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         apt-transport-https \
         ca-certificates \
         gnupg \
+        gcc \
+        libc6-dev \
+        libpq-dev \
+        libpq5 \
     && echo "deb [signed-by=/usr/share/keyrings/cloud.google.asc] https://packages.cloud.google.com/apt cloud-sdk main" \
        > /etc/apt/sources.list.d/google-cloud-sdk.list \
     && curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg \
        | tee /usr/share/keyrings/cloud.google.asc > /dev/null \
     && apt-get update && apt-get install -y --no-install-recommends google-cloud-cli \
+    && pip install --no-cache-dir "ga4gh.vrs[extras]==2.2.0" \
+    && apt-get purge -y --auto-remove gcc libc6-dev libpq-dev \
     && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --no-cache-dir "ga4gh.vrs[extras]"
 
 COPY --from=seqrepo-builder /seqrepo /seqrepo
 
